<resources>
    <string name="app_name">ParkSearch</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_accelerometer">Accelerometer</string>
    <string name="txtXLabel">X:</string>
    <string name="txtXValue" />
    <string name="txtYLabel">Y:</string>
    <string name="txtYValue" />
    <string name="txtZLabel">Z:</string>
    <string name="txtZValue" />
    <string name="acc_btn">Hand Tremor Test</string>
    <string name="tv_shak">Steady</string>
    <string name="title_activity_spiral">Spiral</string>
    <string name="spiral_btn">Spiral Test</string>
    <string name="btn_clear">Open Graph</string>
    <string name="BtnShowGraph">Read Data</string>
    <string name="show_btn">Show Graph</string>
    <string name="spiral2">spiral</string>
    <string name="tv_alert">OK!</string>
    <string name="title_activity_spiral_redraw">SpiralRedraw</string>
    <string name="btn_drawspiral">Draw Graph</string>
    <string name="title_activity_login">Login</string>
    <string name="et_email">Email</string>
    <string name="et_pass">Password</string>
    <string name="btn_login">Login</string>
    <string name="btn_signup">Join Study</string>
    <string name="et_usremail" />
    <string name="title_activity_signup">Signup</string>
    <string name="login_error_message">Enter username and password</string>
    <string name="login_error_title">Invalid</string>
    <string name="action_login">Login</string>
    <string name="logout_label">Logout</string>
    <string name="et_name">Name/Alias </string>
    <string name="et_passsign">Password</string>
    <string name="et_emailsign">Email(Optional)</string>
    <string name="et_dob">DOB</string>
    <string name="signup_error_title">Invalid</string>
    <string name="signup_error_message">Please fill all fields</string>
    <string name="title_activity_user_info">UserInfo</string>
    <string name="tv_nameusrinfo" />
    <string name="tv_emailusrinfo" />
    <string name="tv_dobusrinfo" />
    <string name="tv_genusrinfo" />
    <string name="title_activity_tap_ui">Simple Tapping</string>
    <string name="taptest_btn">Tapping Test</string>
    <string name="tv_avgtime" />
    <string name="title_activity_alternate_tapping">Alternate Tapping</string>
    <string name="results_btn">Analyze Results</string>
    <string name="title_activity_results_analysis">Results &amp; Analysis</string>
    <string name="analysis_btn">Show Analysis</string>
    <string name="read_btn">Read Data</string>
    <string name="title_activity_moto">MotoActivity</string>
    <string name="hello_round">Hello Round World!</string>
    <string name="hello_square">Hello Square World!</string>
    <string name="btn_quest">Questionnaire</string>
    <string name="title_activity_questionnaire">Questionnaire</string>
    <string name="tv_domhandinfo" />
    <string name="about_label">About</string>
    <string name="title_activity_invol_movement">InvolMovement</string>


    <string name="quest1_title">1) Speech</string>
    <string name="quest2_title">2) Facial Expression</string>

    <string name="quest3_title">3) Rigidity(Neck)</string>
    <string name="quest3a_title">3.1) Rigidity(RUE)</string>
    <string name="quest3b_title">3.2) Rigidity(LUE)</string>
    <string name="quest3c_title">3.3) Rigidity(RLE)</string>
    <string name="quest3d_title">3.4) Rigidity(LLE)</string>

    <string name="quest4_title">4) Tremor at rest(Face)</string>
    <string name="quest4a_title">4.1) Tremor at rest(RUE)</string>
    <string name="quest4b_title">4.2) Tremor at rest(LUE)</string>
    <string name="quest4c_title">4.3) Tremor at rest(RLE)</string>
    <string name="quest4d_title">4.4) Tremor at rest(LLE)</string>

    <string name="quest5a_title">5) Finger Tapping(Left)</string>
    <string name="quest5b_title">5.1) Finger Tapping(Right)</string>

    <string name="quest6a_title">6) Hand movements(Left)</string>
    <string name="quest6b_title">6.1) Hand movements(Right)</string>

    <string name="quest7a_title">7) Pronation-Supination of Hands(Left)</string>
    <string name="quest7b_title">7.1) Pronation-Supination of Hands(right)</string>

    <string name="quest8a_title">8) Leg Agility(Left)</string>
    <string name="quest8b_title">8.1) Leg Agility(Right)</string>

    <string name="quest9_title">9) Arising from chair</string>
    <string name="quest10_title">10) Gait</string>
    <string name="quest11_title">11) Postural stability</string>
    <string name="quest12_title">12) Posture</string>
    <string name="quest13_title">13) Body Bradykinesia</string>

    <string name="quest14a_title">14) Postural or Kinetic Tremor of Hands(RUE)</string>
    <string name="quest14b_title">14.1) Postural or Kinetic Tremor of Hands(LUE)</string>


    <string name="radio_ans1">Normal</string>
    <string name="radio_ans2">Slight</string>
    <string name="radio_ans3">Mild</string>
    <string name="radio_ans4">Moderate</string>
    <string name="radio_ans5">Severe</string>
    <string name="ClearSpiralDrawing">clear drawing</string>
    <string name="SpiralSubmit">Submit</string>
    <string name="Results_Normal">Normal</string>
    <string name="Results_Slight">Slight</string>
    <string name="Results_Mild">Mild</string>
    <string name="Results_Moderate">Moderate</string>
    <string name="Results_Severe">Severe</string>
    <string name="title_activity_consent">Consent</string>

    <string name="consentpos">AGREE</string>
    <string name="consentneg">DISAGREE</string>



</resources>
